<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GainsTracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_entry">Enter A New Exercise:</string>
    <string name="title_activity_graph">Progress Graph</string>
    <string name="title_activity_settings_page">Settings</string>
    <string name="title_activity_entries">Previous Entries</string>
    <string name="log_new_exercise_button">LOG NEW EXERCISE</string>
    <string name="view_progress_button">VIEW PROGRESS GRAPH</string>
    <string name="hello_world">hello_world</string>
    <string name="date_label_text">Date:</string>
    <string name="lift_label_text">Lift:</string>
    <string name="view_entries_button">VIEW PREVIOUS ENTRIES</string>
    <string name="log_it_button_text">LOG IT</string>
    <string name="delete_saved_data_button">DELETE SAVED DATA</string>
    <string name="select_lift">Select Lift</string>
    <string name="no_data_to_display">NO DATA TO DISPLAY</string>
    <string name="delete_saved_data_dialog">Are you sure?</string>
    <string name="signature">Matthew Wills 2015</string>
    <string name="graph_title">One Rep Max v Time</string>
    <string name="lift_label_text_entry">Lift:</string>
    <string name="weight_label_text">Weight:</string>
    <string name="reps_label_text">Reps:</string>
    <string-array name="exercise_name_list">
        <item>Squat</item>
        <item>Deadlift</item>
        <item>Bench Press</item>
        <item>Overhead Press</item>
        <item>Row</item>
    </string-array>

</resources>
