<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#ffefe4b0">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/barbell"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/weight"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_new_exercise_button"
        android:id="@+id/new_exercise_button"
        android:layout_below="@+id/barbell"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:onClick="onNewExerciseButtonClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_progress_button"
        android:id="@+id/view_progress_button"
        android:layout_below="@+id/new_exercise_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:onClick="onViewProgressButtonClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_entries_button"
        android:id="@+id/view_entries_button"
        android:layout_below="@+id/view_progress_button"
        android:layout_centerHorizontal="true"
        android:onClick="onViewEntriesButtonClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/signature"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="8sp"/>

</RelativeLayout>
