<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="matthewwills.irontracker.EntryActivity"
    android:background="#ffefe4b0"
    android:orientation="vertical"
    >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Lift: "
                android:id="@+id/liftLabel"
                android:layout_weight="1"
                android:singleLine="true"/>


            <Spinner
                android:id="@+id/lift_name_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/select_lift" />

        </TableRow>

        <TableRow
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/date_label_text"
                android:id="@+id/dateLabel"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/editTextDate"
                android:layout_weight="1"
                android:clickable="true"
                android:hint="1/1/2005"/>

        </TableRow>


        <TableRow
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Weight: "
                android:id="@+id/weightLabel"
                android:layout_weight="1"
                android:singleLine="true"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editTextWeight"
                android:layout_weight="1"
                android:clickable="true"
                android:hint="100"
                android:inputType="number"/>

        </TableRow>

        <TableRow
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Reps: "
                android:id="@+id/repsLabel"
                android:layout_weight="1"
                android:singleLine="true"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editTextReps"
                android:layout_weight="1"
                android:clickable="true"
                android:hint="5"
                android:inputType="number"/>

        </TableRow>



    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="50dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_it_button_text"
            android:id="@+id/button"
            android:layout_gravity="bottom"
            android:onClick="onLogItButtonClick"/>


    </LinearLayout>

</LinearLayout>
